# redhairings

./: README.md  audrey.sh  loopImages.sh  runDemo.sh  wallace.sh  wallaceDemo.sh
dlib-master/examples/: webcam_face_pose_ex.cpp
img/: Victorian-Clothing-Men.jpg.txt  child1_cropped.png.txt  child2_cropped.png.txt  morris.jpg.txt  ron.jpg.txt  test.jpg.txt  testoutanna.jpg.txt  tristan.jpg.txt  vic-test-man-crop.png.txt  vic-test-man.jpg.txt  vic_crop.png.txt  vic_crop_cropped.png.txt
raspi/: CapAndSend.sh  LoopVideo.sh  ReadMe  count.sh  python-picamera.py  video_looper.ini  webcam.py
src/: CMakeCache.txt  CMakeLists.txt  FaceMatcher.cpp  FaceMatcher_RRedits.cpp  Makefile  a10  a10_main.cpp  cmake_install.cmake  faceSwap.cpp  faceSwap_RR.cpp  install  install.sh
src/CPP/: a10.cpp  a10.h
src/dlib_build/: Makefile  cmake_install.cmake
